# nix-csi

./: .envrc  .gitignore  .kluctl.yaml  CLAUDE.md  README.md  TODO.md  build-and-install.sh  containerMount.nix  createstore.py  default.nix  deploy  deployment.yaml  flake.nix  knix-daemonset.py  kopferator.py  nixNG.nix  pyproject.toml  unshare.fish
.claude/: settings.local.json
cknix_csi/: cknix.py  cli.py  helpers.py
demo/: nixos.nix  pod.nix
deployment/: .gitignore
gotest/: default.nix  main.go
guests/: binary-cache.nix  cache.nix  containerMount.nix  ctest.nix  nixNG.nix  test.nix
knix_csi/: cli.py  helpers.py  knix.py
kubenix/: cache.nix  clusterRoleBinding.nix  config.nix  crd.nix  csidriver.nix  ctest.nix  customResourceAttrs.nix  daemonset.nix  default.nix  namespace.nix  options.nix  rbac.nix  serviceAccount.nix  storageclass.nix  supervisorConfig.nix  testDeploy.nix  tmpDeploy.nix  undeploy.nix
lib/: default.nix
nix/: csi-proto-python.nix  dinitEval.nix  dockerUtils.nix
nix/csi-proto-python/: pyproject.toml
nix/dsImage/: containerImage.nix  default.nix  dinixEval.nix
nix/os/: default.nix  (+1 more)
nix_csi/: cli.py  csi.py  helpers.py
pkgs/: asyncache.nix  default.nix  kr8s.nix  python-jsonpath.nix
python/: build.py  cli.py  csi.py  default.nix  helpers.py  knix-deployment.py  kopferator.py  pyproject.toml  service.py  test.py
shell-operator/: README.md  deployment.yaml  example-usage.md  process-expression.sh  rbac.yaml  test-hook.sh
yaml/: crd.yaml  csidaemonset.yaml  daemonset.yaml  deployment.yaml  expression.yaml  ubuntu.yaml
(+24 files in other folders)
